<?xml version="1.0"?>
<package format="2">
  <name>march_safety</name>
  <version>0.0.0</version>
  <description>
    Observes and checks (sensor) data during run-time. If there is something
    wrong a warning/error message should be published.
  </description>
  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>march_shared_resources</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>sound_play</depend>

  <test_depend>rostest</test_depend>
  <test_depend>code_coverage</test_depend>
</package>
