<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>march_safety</name>
  <version>0.0.0</version>
  <description>
    Observes and checks (sensor) data during run-time. If there is something
    wrong a warning/error message should be published.
  </description>
  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>march_shared_resources</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sound_play</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rostest</test_depend>
</package>
