<?xml version="1.0"?>
<package format="2">
    <name>march_sound_scheduler</name>
    <version>0.0.0</version>
    <description>Schedules and plays sound with the ros sound_play package</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>march_shared_resources</depend>
    <depend>sound_play</depend>
</package>
